manifests/local/networking-config/external-secrets.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: external-secrets
  namespace: external-secrets
spec:
  endpointSelector: {}
  egress:
    # K8s API server
    - toEntities:
        - kube-apiserver
    # Webhook secret store
    - toFQDNs:
        - matchName: secrets.cloud.test
      toPorts:
        - ports:
          - port: "80"
            protocol: TCP
