manifests/local/networking-config/kyverno.cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kyverno
  namespace: kyverno
spec:
  endpointSelector: {}
  egress:
    - toEntities:
      - kube-apiserver
  ingress:
    - fromEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kyverno
